--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -263,6 +263,11 @@ visible in the for values of $\omega$ that exceed the threshold value.
 \noindent{TODO: Numerical example (convergence below threshold of the Benzene spectrum computed in different computational setup).}
 \vspace{0.3cm}
 
+\begin{figure}
+\includegraphics[scale=0.56]{c6h6_spectrum.eps}
+\caption{\label{fig1}Convergence below threshold of the Benzene spectrum computed in different computational setup.}
+\end{figure}
+
 %This analysis, carried out starting from the representation of the linear response functional in terms of fluctuation states, evidences some general properties of the linear response. 
 %In the next sections we will reformulate an analogous procedure directly looking at the susceptibility. This analysis lead us to the core of the paper, namely the description of the
 %analytical structure of the linear response susceptibility. 
