--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -2,14 +2,14 @@
 
 % Language and font encodings
 \usepackage[english]{babel}
-%\usepackage[utf8x]{inputenc}
-%\usepackage[T1]{fontenc}
 
 % Useful packages
 \usepackage{graphicx}
 \usepackage{amsmath,amsfonts,amssymb,amsthm}
 \usepackage{mathtools,braket}
+\usepackage{tikz}%,pgfplots}
 \usepackage{xifthen}
+%\pgfplotsset{compat=1.15}
 
 % notation for standard math
 \renewcommand{\d}{\partial}
@@ -157,7 +157,7 @@ and the analytic structure of the linear response susceptibility.
 
 \section{Theory}
 
-In this section we review the fundamental equations that govern the properties of an open quantum system in the linear response regime. We assume that our calculations are carried 
+We start by reviewing review the fundamental equations that govern the properties of an open quantum system in the linear response regime. We assume that our calculations are carried 
 out within a highly complete real-space basis set that provides a precise description of the system in a finite computational domain. The purpose of the analysis is to determine the 
 asymptotic behavior of the main building blocks of the LR in the long range. Then we discuss the relation between localization properties and dependence of the results of LR from the 
 specific choice of the basis set and, in particular, from the dimension of the computation  domain. 
@@ -165,40 +165,69 @@ specific choice of the basis set and, in particular, from the dimension of the c
 Linear response can be effectively applied to the analysis of the electronic excitations in molecular systems. In this framework one consider a system 
 described by the Hamiltonian $\hnot$ and assume that the ground-state density $\dmnot$ has been provided. Linear response formalism allows us to evaluate the modification 
 of the expectation value of a generic observable induced by a time-dependent perturbing field acting on the system. This quantity, written in the frequency domain, can be expressed 
-through the evaluation of the \emph{linear response functional}:
+through the evaluation of the \emph{linear response functional}
 \be\lb{LinearResponseFunctDef1}
-\braket{\delta\op O}(\omega) = \trace{\dm'(\omega)\op O} \;,
+\braket{\delta\op O}(\omega) = \trace{\dm'(\omega)\op O} \;.
 \ee
-where the operator $\op O$ represents the observable\footnote{For a sake of concreteness, we are limiting our considerations to observables that do not explicitly depend on time} 
-under inspection. The modification of the ground-state density induced by the perturbation is expressed by the \emph{response density operator} $\dm'(\omega)$ that, in the linear 
-response regime, is a linear function of the perturbing field $\op\Phi(\omega)$. For this reason it is possible to define the \emph{susceptibility} superoperator, as follows:
-\be\lb{SusceptibilityDef1}
-\dm'(\omega) = \sop{{\cal R}}(\omega) \op\Phi(\omega) \;. 
+% where $\op O$ represents the observable\footnote{For a sake of concreteness, we are limiting our considerations to observables that do not explicitly depend on time} 
+% under inspection. The modification of the ground-state density induced by the perturbation is expressed by the \emph{response density operator} $\dm'(\omega)$ that, in the linear 
+% response regime, is a linear function of the perturbing field $\op\Phi(\omega)$. For this reason it is possible to define the \emph{susceptibility} superoperator, as follows:
+% \be\lb{SusceptibilityDef1}
+% \dm'(\omega) = \sop{{\cal R}}(\omega) \op\Phi(\omega) \;. 
+% \ee
+% Susceptibility describes an intrinsic feature of the unperturbed system and determines its response to \emph{any} perturbations, in the linear response regime.
+Here $\op O$ represents the observable\footnote{For a sake of concreteness, we are limiting our considerations to observables that do not explicitly depend on time} 
+under inspection while the \emph{response density operator} $\dm'(\omega)$ describes the modification of the ground-state density induced by the perturbation. In the contest
+of the linear response this object satisfies an equation of motion written in the form of a quantum Liouville operator (for example see \cite{baroni2008}),
+\be\lb{LiouvillianRhopomegaDef1}
+\left(\omega - \Liouv\right) \dm'(\omega) =  \commutator{\op\Phi(\omega)}{\dmnot} \;,
 \ee
-Susceptibility describes an intrinsic feature of the unperturbed system and determines its response to \emph{any} perturbations, in the linear response regime.
+and $\op\Phi(\omega)$ represents the perturbing field acting on the system. 
 
 \subsection{Fluctuation states. A localization argument for the response density}
 
 The response density operator is expressed as the first-order variation of ground state density $\sum_{\{p\}} \ket{\psi_p} \bra{\psi_p}$, where the set $\{\ket{\psi_p}\}$ denote the 
 occupied states, \emph{i.e} the subset of the bound eigenstates of $\hnot$ with energy $\eps_p$ lower than the Fermi level. Using this notation we denote the energy of the HOMO level 
-as $\eps_h$ and identify the value of the first ionization potential with $|\eps_h|$. In what follows we will assume that the set of states $\{\ket{\psi_p}\}$ are real functions, when 
-projected in the $\r$-representation.  
+as $\eps_h$ and identify the value of the first ionization potential with $|\eps_h|$. In what follows we will assume that the set of states $\{\ket{\psi_p}\}$ are desbribe by real 
+functions, when projected in the $\r$-representation.  
 
-By considering the linear order time evolution of the eigenstates of $\hnot$ in presence of the perturbation we can derive the equation of motion of the response density in the form of 
-a quantum Liouville equation (for example see \cite{baroni2008}). This procedure suggests us to introduce an explicit representation of the response density in terms of a set of 
-$\omega$-dependent \emph{fluctuation states} $\{\ket{f_p(\omega)}\}$, as follows: 
+% By considering the linear order time evolution of the eigenstates of $\hnot$ in presence of the perturbation we can derive the equation of motion of the response density in the form of 
+% a quantum Liouville equation (for example see \cite{baroni2008}). This procedure suggests us to introduce an explicit representation of the response density in terms of a set of 
+% $\omega$-dependent \emph{fluctuation states} $\{\ket{f_p(\omega)}\}$, as follows: 
+% \be\lb{rhoPrimeFluctuationStateDef1}
+% \dm'(\omega) = \sum_p\left(\ketbra{\psi_p}{f_p(-\omega)} + \ketbra{f_p(\omega)}{\psi_p}\right) \;.
+% \ee
+% Fluctuation states are, by construction, orthogonal to the occupied eigenstates of $\hnot$. An analysis of the Liouville equation for the response density written in this fashion evidences 
+% that their equations of motion are written in the form of a modified Sternheimer equation \cite{mahan1980}:
+% \be\lb{fluctuationStateEqMotion1}
+% \left[\omega - (\hnot-\eps_p)\right]\ket{f_p(\omega)} = \op Q_0(\op\Phi(\omega)+\op V'(\omega))\ket{\psi_p} \;,
+% \ee
+% where $\op Q_0=\identity-\dmnot$ is the projector in the subspace orthogonal to the occupied states of $\hnot$ and the operator $\op V'(\omega)$ is a perturbing term due to the 
+% density-dependence of the unperturbed Hamiltonian.
+
+The inspection of the linear order time evolution of the eigenstates of $\hnot$ evidence that the response density acts as a transitions operator, linking the occupied and empty subspaces 
+of $\hnot$, and satisfies the \emph{transverse} condition  
+\be\lb{RhopTransverseDef1}
+\dm' = \dm_{\perp} \doteq \dmnot\dm'\op Q_0 + \op Q_0\dm'\dmnot
+\ee
+where $\op Q_0=\identity-\dmnot$ is the projector in the subspace orthogonal to the occupied states of $\hnot$. Due to this fact it is possible to introduce an explicit representation of the 
+response density as follows 
 \be\lb{rhoPrimeFluctuationStateDef1}
-\dm'(\omega) = \sum_p\left(\ketbra{\psi_p}{f_p(-\omega)} + \ketbra{f_p(\omega)}{\psi_p}\right) \;.
+\dm'(\omega) = \sum_p\left(\ketbra{\psi_p}{f_p(-\omega)} + \ketbra{f_p(\omega)}{\psi_p}\right) \;,
 \ee
-Fluctuation states are, by construction, orthogonal to the occupied eigenstates of $\hnot$. An analysis of the Liouville equation for the response density written in this fashion evidences 
-that their equations of motion are written in the form of a modified Sternheimer equation \cite{mahan1980}:
+where we have defined the set of $\omega$-dependent \emph{fluctuation states} $\{\ket{f_p(\omega)}\}$, that span the empty subspace of $\hnot$. 
+%Fluctuation states are, by construction, orthogonal to the occupied eigenstates of $\hnot$.
+%derive the equation of motion of the response density in the form of a quantum Liouville equation (for example see \cite{baroni2008}). 
+An analysis of the Liouville equation \eqref{LiouvillianRhopomegaDef1} for the response density written in this fashion evidences that the equations of motion of fluctuation states are 
+written as a modified Sternheimer equations \cite{mahan1980}. The first-order Hamiltonian contains, apart from the perturbing field, a further term $\op V'[\dm']$ due to the density-dependence 
+of $\hnot$, and the equations read
 \be\lb{fluctuationStateEqMotion1}
-\left[\omega - (\hnot-\eps_p)\right]\ket{f_p(\omega)} = \op Q_0(\op\Phi(\omega)+\op V'(\omega))\ket{\psi_p} \;,
+%\left[\omega - (\hnot-\eps_p)\right]\ket{f_p(\omega)} = \op Q_0(\op\Phi(\omega)+\op V'(\omega))\ket{\psi_p} \;,
+\left[\omega - (\hnot-\eps_p)\right]\ket{f_p(\omega)} = \op Q_0(\op\Phi(\omega)+\op V'[\dm'])\ket{\psi_p} \;.
 \ee
-where $\op Q_0=\identity-\dmnot$ is the projector in the subspace orthogonal to the occupied states of $\hnot$ and the operator $\op V'(\omega)$ is a perturbing term due to the 
-density-dependence of the unperturbed Hamiltonian.
-
-The interesting aspect of equations \eqref{fluctuationStateEqMotion1} in the perspective of the present analysis is that they allow us to present a localization argument for the fluctuation 
+%where $\op Q_0=\identity-\dmnot$ is the projector in the subspace orthogonal to the occupied states of $\hnot$ and t
+%and the operator $\op V'[\dm']$ described the further perturbing term due to the density-dependence of $\hnot$. % the unperturbed Hamiltonian.
+The interesting aspect of these equations in the perspective of the present analysis is that they allow us to present a localization argument for the fluctuation 
 states. To clarify this statement we split the unperturbed Hamiltonian as the sum of the kinetic $\op T$ and potential $\op V$ term and solve \eqref{fluctuationStateEqMotion1} in the form 
 of a self-consistent inhomogeneous Helmholtz equation by writing:
 \be\lb{rhoPrimeFluctuationStateDef2}
@@ -251,7 +280,7 @@ states start behaving as unbound wave functions. In this case a computational de
 \eqref{LinearResponseFunctDef2}, where the bound state character of $\{\bra{\psi_p}\op O\}$ behave as a regulator. This observation indicates that, above threshold, a computational setup 
 provides a reliable assessment of \eqref{LinearResponseFunctDef2} only if it is able to express an unbiased description of the fluctuation states in the support of $\{\bra{\psi_p}\op O\}$. 
 
-As an explicit example in support of these arguments we compare the absorption spectrum of a benzene molecule computed in three distinct real-space basis set, which differs for the 
+As an explicit example in support of these arguments we compare the absorption spectrum of a $CO$ molecule computed in three distinct real-space basis set, which differs for the 
 dimension of the computational domain. Results evidences that the curves are almost coincident in the below threshold regime, whereas the effect of the computational setup are clearly
 visible in the for values of $\omega$ that exceed the threshold value. 
 
@@ -259,13 +288,9 @@ visible in the for values of $\omega$ that exceed the threshold value.
 % to the value of $\omega$. 
 % This observation has relevant consequence on the capability of a computational setup to provide a reliable assessment of the linear response functional....  
 
-\vspace{0.3cm}
-\noindent{TODO: Numerical example (convergence below threshold of the Benzene spectrum computed in different computational setup).}
-\vspace{0.3cm}
-
 \begin{figure}
-\includegraphics[scale=0.56]{c6h6_spectrum.eps}
-\caption{\label{fig1}Convergence below threshold of the Benzene spectrum computed in different computational setup.}
+\includegraphics[scale=0.56]{co_spectrum.eps}
+\caption{\label{fig1}(Color online) Convergence below threshold of the $CO$ spectrum computed in different computational setup.}
 \end{figure}
 
 %This analysis, carried out starting from the representation of the linear response functional in terms of fluctuation states, evidences some general properties of the linear response. 
@@ -278,14 +303,17 @@ The analysis carried out starting from the representation of the linear response
 for open systems. In particular, by analyzing the asymptotic behavior of fluctuation states in long range limit, we have showed that they exhibit a bound-state character in the regime  
 $\omega<|\eps_h|$. Consequently we have argued that the linear response functional, in the same $\omega$ range, provides a setup-independent result with a modest computational effort. 
 
+In the linear 
+response regime, is a linear function of the perturbing field $\op\Phi(\omega)$. For this reason it is possible to define the \emph{susceptibility} superoperator, as follows:
+\be\lb{SusceptibilityDef1}
+\dm'(\omega) = \sop{{\cal R}}(\omega) \op\Phi(\omega) \;. 
+\ee
+Susceptibility describes an intrinsic feature of the unperturbed system and determines its response to \emph{any} perturbations, in the linear response regime.
+
 Now we reformulate an analogous analysis looking at the susceptibility superoperator, implicit defined through \eqref{SusceptibilityDef1}. This approach leads to the concept of \emph{excitation 
 operators}, defined through a self-consistent operator eigenvalue equation. Excitations behave as singularity of the susceptibility operator and their knowledge provides a deeper insight 
 into the analytic structure of the linear response. 
 
-The starting point of this analysis is represented by the Liouville equation for the response density operator:
-\be\lb{LiouvillianRhopomegaDef1}
-\left(\omega - \Liouv\right) \dm'(\omega) =  \commutator{\op\Phi(\omega)}{\dmnot} \;.
-\ee
 Using the spectral decomposition of the resolvent of the Liouvillian we have:
 \be\lb{RhopExcitationDef1}
 \sop{{\cal R}}(\omega) \cdot   =
@@ -295,14 +323,56 @@ Using the spectral decomposition of the resolvent of the Liouvillian we have:
 with $\opskew{O} = \commutator{\op O}{\dmnot}$. 
 Excitation operators as eigenstates of the Liouvillian (keep left and right different or not?):
 \be\lb{ExcitationOperatorsDef1}
-\Liouv \op E = E \op E \;, \qq
- \op{\tilde E} \Liouv = E \op{\tilde E}
+\Liouv \op E = E \op E \;, %\qq \op{\tilde E} \Liouv = E \op{\tilde E}
 \ee
+with the normalization condition $\trace{\op E\op E'} = \delta(E-E')$. 
 We can express excitation operators as follows:
-\begin{align}\lb{ExcitationOperatorsDef2}
-\op E &= \sum_p \left( \ket{\phi^E_p}\bra{\psi_p} + \ket{\psi_p} \bra{\chi^E_p}\right)\;, \nn \\
-\op {\tilde E} &= \sum_p \left( \ket{\psi_p} \tbra{\phi^E_p} + \tket{\chi^E_p}\bra{\psi_p} \right)\;.
+% \begin{align}\lb{ExcitationOperatorsDef2}
+% \op E &= \sum_p \left( \ket{\phi^E_p}\bra{\psi_p} + \ket{\psi_p} \bra{\chi^E_p}\right)\;, \nn \\
+% \op {\tilde E} &= \sum_p \left( \ket{\psi_p} \tbra{\phi^E_p} + \tket{\chi^E_p}\bra{\psi_p} \right)\;.
+% \end{align}
+\be\lb{ExcitationOperatorsDef2}
+\op E = \sum_p \left( \ket{\phi^E_p}\bra{\psi_p} + \ket{\psi_p} \bra{\chi^E_p}\right)\;, 
+\ee
+We should therefore have
+\begin{align}
+\left(\hnot - \eps_p\right) \ket{\phi_p^E} + \op Q_0 \op V'[\op E] \ket{\psi_p} &= E \ket{\phi_p^E} \;, \\
+\left(\hnot - \eps_p\right)\ket{\chi_p^E} + \op Q_0 \op V'[\op E] \ket{\psi_p} &= -E \ket{\chi_p^E} \;.
 \end{align}
+And the orthonormalization of the excitation operators is translated as: 
+\be
+\sum_p \left(\braket{\phi_p^E | \phi_p^{E'}} + \braket{\chi_p^E | \chi_p^{E'}}\right) = \delta(E-E')
+\ee
+
+\begin{figure}
+
+\begin{tikzpicture}[scale=0.8]
+% axes
+\draw[->] (0,0) -- (8,0); %node[below] {$x$};
+\draw[->] (0,0) -- (0,6); %node[left] {$y$};
+]
+\draw[dashed,thin,color=gray] (0,5) -- (2,5);
+\draw (2,5) -- (8,5);
+\draw[dashed,thin,color=gray] (0,3) -- (4,3);
+\draw (4,3) -- (8,3);
+\draw[dashed,thin,color=gray] (0,1) -- (6,1);
+\draw (6,1) -- (8,1);
+
+\draw[dashed,very thin,color=black] (2,0) -- (2,5);
+\draw[dashed,very thin,color=black] (4,0) -- (4,3);
+\draw[dashed,very thin,color=black] (6,0) -- (6,1);
+
+%\draw (0,1) -- (3,1);
+
+% Draw axes
+%\draw [<->,thick] (0,5) node (yaxis) [above] {$y$}
+%    |- (5,0) node (xaxis) [below] {energy};
+
+
+\end{tikzpicture}
+
+\caption{\label{fig2}Excitation landscape.}
+\end{figure}1
 
 
 \subsection{Comments. The analytic structure of the linear response susceptibility}
